WIP: refactoring the internal graph data model and its utilities